--- a/profapp/templates/company/company_base_angular.html
+++ b/profapp/templates/company/company_base_angular.html
@@ -1,5 +1,7 @@
 <script>
     module.controller('CompanyMenuController', ['$scope', '$timeout', function ($scope, $timeout) {
+        angularControllerFunction('user_controller', 'set_selected_user_menu')('companies');
+
         $scope.user = {{ g.user.get_client_side_dict()| tojson|safe }};
         $scope.company = {{ company.get_client_side_dict()|tojson|safe }};
         $scope.user_active = {{ user_company_active|safe}}
@@ -16,9 +18,9 @@
         $scope.url_portal_portal = {{ raw_url_for('portal.profile')|safe }};
 
         $scope.url_portal_tags = {{ raw_url_for('portal.tags')|safe }};
-        $scope.url_portal_banners = {{ raw_url_for('portal.portal_banners')|safe }};
+        $scope.url_portal_banners = {{ raw_url_for('portal.banners')|safe }};
         $scope.url_portal_translations = {{ raw_url_for('portal.translations')|safe }};
-        $scope.url_company_readers = {{ raw_url_for('company.readers')|safe }};
+        $scope.url_portal_readers = {{ raw_url_for('portal.readers')|safe }};
         $scope.url_portal_portals_partners = {{ raw_url_for('company.portal_memberees')|safe }};
 
         $scope.selected_company_menu = '';
@@ -54,22 +56,22 @@
                     <a ng-if="0" class="pull-right" ng-if="company.author_user_id == user.id" ng-class="{'selected': selected_company_menu == 'portal_translations'}"
                        href="{{ url_portal_translations({company_id: company.id}) }}">{{ _('Translations') }}</a>
                     <a class="pull-right" ng-if="company.author_user_id == user.id" ng-class="{'selected': selected_company_menu == 'portal_banners'}"
-                       href="{{ url_portal_banners({company_id: company.id}) }}">{{ _('Banners') }}</a>
+                       href="{{ url_portal_banners({portal_id: company.own_portal.id}) }}">{{ _('Banners') }}</a>
                     <a class="pull-right" ng-if="company.author_user_id == user.id" ng-class="{'selected': selected_company_menu == 'portal_tags'}"
-                       href="{{ url_portal_tags({company_id: company.id}) }}">{{ _('Tags') }}</a>
+                       href="{{ url_portal_tags({portal_id: company.own_portal.id}) }}">{{ _('Tags') }}</a>
                     <a class="pull-right" ng-class="{'selected': selected_company_menu == 'publications'}"
                        id="publications"
-                       href="{{ url_portal_publications({company_id: company.id}) }}">{{ _('Publications') }}</a>
-                    <a class="pull-right" ng-class="{'selected': selected_company_menu == 'comments'}"
+                       href="{{ url_portal_publications({portal_id: company.own_portal.id}) }}">{{ _('Publications') }}</a>
+                    <a class="dn pull-right" ng-class="{'selected': selected_company_menu == 'comments'}"
                        id="comments"
                        href="#">{{ _('Comments') }}</a>
                     <a class="pull-right" ng-class="{'selected': selected_company_menu == 'companies_readers'}"
                        id="companies_readers"
-                       href="{{ url_company_readers({company_id: company.id}) }}">{{ _('Readers') }}</a>
+                       href="{{ url_portal_readers({portal_id: company.own_portal.id}) }}">{{ _('Readers') }}</a>
                     <a class="pull-right" ng-class="{'selected': selected_company_menu == 'membership_plans'}"
-                       href="{{ url_portal_plans({company_id: company.id}) }}">{{ _('Membership plans') }}</a>
+                       href="{{ url_portal_plans({portal_id: company.own_portal.id}) }}">{{ _('Membership plans') }}</a>
                     <a class="pull-right" ng-class="{'selected': selected_company_menu == 'companies_members'}"
-                       href="{{ url_portal_companies_members({company_id: company.id}) }}">{{ _('Members') }}</a>
+                       href="{{ url_portal_companies_members({portal_id: company.own_portal.id}) }}">{{ _('Members') }}</a>
                     <a class="pull-right" ng-if="0" ng-class="{'selected': selected_company_menu == 'statistics'}"
                        id="statistics"
                        href="#">{{ _('Statistics') }}</a>
