--- a/profapp/templates/company/companies_members.html
+++ b/profapp/templates/company/companies_members.html
@@ -20,7 +20,7 @@
 
             angularControllerFunction('CompanyMenuController', 'set_selected_company_menu')('companies_members');
             $scope.$$translate = {{translates('company_partners') | safe}};
-            $scope.url_load = '{{ url_for('portal.companies_members_load', company_id=company.id)}}';
+            $scope.url_load = '{{ url_for('portal.companies_members_load', portal_id=portal.id)}}';
             $scope.url_company_partner_details = {{ raw_url_for('portal.company_partner_update')| safe}};
             $scope.url_change_status = {{ raw_url_for('portal.company_member_change_status')|safe }};
             $scope.url_company_profile = {{ raw_url_for('company.profile')|safe }};
