--- a/profapp/templates/portal/banners.html
+++ b/profapp/templates/portal/banners.html
@@ -37,8 +37,8 @@
         module.controller('portal_banners', function ($scope, $ok, $uibModal, $confirm) {
             angularControllerFunction('CompanyMenuController', 'set_selected_company_menu')('portal_banners');
             $scope.$$translate = {{translates('company_partners') | safe}};
-            $scope.url_banners = '{{ url_for('portal.portal_banners_load', company_id=company.id)}}';
-            $scope.url_save_banners = {{ raw_url_for('portal.save_portal_banner')|safe }};
+            $scope.url_banners = '{{ url_for('portal.banners_load', portal_id=portal.id)}}';
+            $scope.url_save_banners = '{{ url_for('portal.save_portal_banner', portal_id = portal.id) }}';
             $scope.company = {{ company.get_client_side_dict()|safe }};
 
             {% raw %}
@@ -62,7 +62,7 @@
 
             $scope.sendData = function (grid_data, setdatafuctions) {
                 $scope.loading = true;
-                $ok($scope.url_save_banners({company_id: $scope.company.id}), grid_data, setdatafuctions).finally(function () {
+                $ok($scope.url_save_banners, grid_data, setdatafuctions).finally(function () {
                     $scope.gridApi.grid.setGridData();
                     $scope.loading = false;
                     $scope.load_contr = true;
