--- a/profapp/templates/portal/readers.html
+++ b/profapp/templates/portal/readers.html
@@ -36,13 +36,14 @@ th, td {
         angularControllerFunction('CompanyMenuController', 'set_selected_company_menu')('companies_readers');
         $scope.$$translate = {{ translates('CompanyReaders')|safe }};
         $scope.own_company_id = '{{ company.id }}';
-        $scope.get_readers = {{ raw_url_for('company.readers_load')|safe }};
+        $scope.portal_id = '{{ portal.id }}';
+        $scope.get_readers = {{ raw_url_for('portal.readers_load')|safe }};
         $scope.get_link_user_profile = {{ raw_url_for('user.profile')|safe }};
 
         {% raw %}
 
         $scope.gridOptions1 = $.extend({}, $scope.gridOptions, {
-             urlLoadGridData: $scope.get_readers({company_id: $scope.own_company_id}),
+             urlLoadGridData: $scope.get_readers({portal_id: $scope.portal_id}),
              columnDefs: [
                  { name: 'first_name', type: 'link', href:'get_link_user_profile({user_id : row.entity.id})', enableSorting: false,enableCellEdit: false, enableColumnMenu: false, displayName: 'User profile', width: '35%',
                      filter: {type:'input'}
