--- a/profapp/templates/company/company_base_angular.html
+++ b/profapp/templates/company/company_base_angular.html
@@ -15,7 +15,7 @@
         $scope.url_portal_plans = {{ raw_url_for('portal.plans')|safe }};
 
 
-        $scope.url_portal_portal = {{ raw_url_for('portal.profile')|safe }};
+        $scope.url_portal_profile = {{ raw_url_for('portal.profile')|safe }};
 
         $scope.url_portal_tags = {{ raw_url_for('portal.tags')|safe }};
         $scope.url_portal_banners = {{ raw_url_for('portal.banners')|safe }};
@@ -52,7 +52,7 @@
             <div class="row">
                 <div ng-if="company.own_portal" class="col-lg-12 col-md-12 col-sm-12 col-xs-12 pl0 pr0">
                     <a class="pull-right" ng-class="{'selected': selected_company_menu == 'portal_profile'}"
-                       href="{{ url_portal_portal({company_id: company.id, create_or_update: 'update'}) }}">{{ _('Portal profile') }}</a>
+                       href="{{ url_portal_profile({portal_id: company.own_portal.id}) }}">{{ _('Portal profile') }}</a>
                     <a ng-if="0" class="pull-right" ng-if="company.author_user_id == user.id" ng-class="{'selected': selected_company_menu == 'portal_translations'}"
                        href="{{ url_portal_translations({company_id: company.id}) }}">{{ _('Translations') }}</a>
                     <a class="pull-right" ng-if="company.author_user_id == user.id" ng-class="{'selected': selected_company_menu == 'portal_banners'}"
