--- a/profapp/static/css/oles.css
+++ b/profapp/static/css/oles.css
@@ -3,7 +3,6 @@
     color: #ccc;
 }
 
-
 .item:hover {
     /*background: rgba(255, 200, 200, 0.3);*/
 }
@@ -522,8 +521,6 @@ div.pr-column-group {
     display: table-column-group;
 }
 
-
-
 div.pr-cell {
     display: table-cell;
     padding: 0.2em 1em;
@@ -855,13 +852,42 @@ div.pr-row:last-child div.pr-cell {
     color: red;
 }
 
-
 .fa-gravatar:before {
-    content: "\f1a0"; }
+    content: "\f1a0";
+}
+
 .fa-gravatar {
-  filter: progid:DXImageTransform.Microsoft.BasicImage(rotation=3);
-  -webkit-transform: rotate(270deg);
-  -ms-transform: rotate(270deg);
-  transform: rotate(270deg); }
+    filter: progid:DXImageTransform.Microsoft.BasicImage(rotation=3);
+    -webkit-transform: rotate(270deg);
+    -ms-transform: rotate(270deg);
+    transform: rotate(270deg);
+}
 
+.bold {
+    font-weight: bold !important;
+}
 
+.italic {
+    font-style: italic !important;
+}
+
+.black {
+    color: #000 !important;
+}
+
+.tooltip.pr-grid-tooltip-class .tooltip-inner {
+    background-color: #ccc;
+}
+
+.tooltip.pr-grid-tooltip-class .tooltip-arrow {
+    border-top-color: #ccc;
+}
+
+.pr-grid-tooltip-class.tooltip.in {
+    opacity: 1;
+    filter: alpha(opacity=100);
+}
+
+.pr-grid-tooltip-class .tooltip-inner {
+    max-width: 500px;
+}
