--- a/profapp/templates/front/wood/layout.html
+++ b/profapp/templates/front/wood/layout.html
@@ -13,17 +13,13 @@
         {% block og -%}
             <meta property="og:site_name" content="{% block og_name %}{{ portal.name }}{% endblock %}"/>
             <meta property="og:title" content="{% block og_title %}{{ self.title()|trim }}{% endblock %}"/>
-            <meta property="og:description"
-                  content="{% block og_description %}{{ self.description()|trim }}{% endblock %}"/>
+            <meta property="og:description" content="{% block og_description %}{{ self.description()|trim }}{% endblock %}"/>
             <meta property="og:image" content="{% block og_img_url %}{{ portal.logo.url }}{% endblock %}"/>
         {%- endblock %}
         <link href="{{ static_address('front/' + portal.layout.name + '/css/bootstrap.min.css') }}" rel="stylesheet">
-        <link href="{{ static_address('front/' + portal.layout.name + '/css/jasny-bootstrap.min.css') }}"
-              rel="stylesheet">
-        <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700&subset=cyrillic,cyrillic-ext,latin-ext"
-              rel="stylesheet">
-        <link href="{{ static_address('front/' + portal.layout.name + '/fonts/font-awesome/css/font-awesome.min.css') }}"
-              rel="stylesheet">
+        <link href="{{ static_address('front/' + portal.layout.name + '/css/jasny-bootstrap.min.css') }}" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700&subset=cyrillic,cyrillic-ext,latin-ext" rel="stylesheet">
+        <link href="{{ static_address('front/' + portal.layout.name + '/fonts/font-awesome/css/font-awesome.min.css') }}" rel="stylesheet">
         <link href="{{ static_address('front/' + portal.layout.name + '/css/custom.css') }}" rel="stylesheet">
         <link href="{{ static_address('css/article.css') }}" rel="stylesheet">
         <link href="{{ static_address('front/' + portal.layout.name + '/css/article.css') }}" rel="stylesheet">
@@ -39,13 +35,13 @@
     {% endblock %}
 </head>
 <body class="{% block body_class %}{% endblock %}">
-{{ portal.advs['body_begin']|safe }}
-{% include 'header.html' %}
-{% block body %}{% endblock %}
-{% include 'footer.html' %}
-<script src="{{ static_address('front/' + portal.layout.name + '/js/bootstrap.min.js') }}"></script>
-<script src="{{ static_address('front/' + portal.layout.name + '/js/jasny-bootstrap.min.js') }}"></script>
-<script src="{{ static_address('front/' + portal.layout.name + '/js/jquery.fittext.js') }}"></script>
-<script src="{{ static_address('front/' + portal.layout.name + '/js/custom.js') }}"></script>
+    {{ portal.advs['body_begin']|safe }}
+    {% include 'header.html' %}
+    {% block body %}{% endblock %}
+    {% include 'footer.html' %}
+    <script src="{{ static_address('front/' + portal.layout.name + '/js/bootstrap.min.js') }}"></script>
+    <script src="{{ static_address('front/' + portal.layout.name + '/js/jasny-bootstrap.min.js') }}"></script>
+    <script src="{{ static_address('front/' + portal.layout.name + '/js/jquery.fittext.js') }}"></script>
+    <script src="{{ static_address('front/' + portal.layout.name + '/js/custom.js') }}"></script>
 </body>
 </html>
