--- a/profapp/templates/front/wood/macros.html
+++ b/profapp/templates/front/wood/macros.html
@@ -1,5 +1,5 @@
 {% macro tag(tag, tags, span_classes = '') %}
-    <span class="{{ span_classes }} {{ 'tag-selected' if tag.text in tags.selected_names else 'tag-not-selected' }}">
+    <span class="{{ span_classes }} {{ 'tag-selected label' if tag.text in tags.selected_names else 'tag-not-selected' }}">
         <a {% if tags.url_toggle_tag %}href="{{ tags.url_toggle_tag(tag.text) }}"{% endif %}>
             <i class="fa fa-tag" aria-hidden="true" style="margin-right: 5px"></i>
             {{ tag.text }}
