--- a/profapp/templates/company/company_base_angular.html
+++ b/profapp/templates/company/company_base_angular.html
@@ -3,7 +3,7 @@
         angularControllerFunction('user_controller', 'set_selected_user_menu')('companies');
 
         $scope.user = {{ g.user.get_client_side_dict()| tojson|safe }};
-        $scope.company = {{ company.get_client_side_dict()|tojson|safe }};
+        $scope.company = {{ (company.get_client_side_dict() if company else portal.own_company.get_client_side_dict())|tojson|safe }};
         $scope.user_active = {{ user_company_active|safe}}
         $scope.$$translate = {{ translates('CompanyMenuController')|safe }};
 
