--- a/profapp/templates/front/wood/header.html
+++ b/profapp/templates/front/wood/header.html
@@ -13,7 +13,7 @@
                 <i class="fa fa-bars" aria-hidden="true"></i>
             </button>
             {% endif %}
-            <a class="navbar-brand" href="/" style="width: 200px; "><img class="img-responsive" src="{{ portal.logo.url }}"></a>
+            <a class="navbar-brand" href="/" style="width: 200px; "><img class="img-responsive bg-contain" src="{{ portal.logo.url }}"></a>
         </div>
         <!--Collapsive navbar-->
         <nav class="navbar-collapse collapse" id="navbar-collapsible" role="navigation">
@@ -38,8 +38,7 @@
                 <div class="form-group">
                     <div class="input-group">
                         <input class="form-control search-form" type="text" name="search" placeholder="{{ _('Search') }}" value="{{ search.text if search and search.text else ''  }}">
-                        <span class="input-group-addon search-btn"><i class="fa fa-search"
-                                                                      aria-hidden="true"></i></span>
+                        <span class="input-group-addon search-btn"><i class="fa fa-search" aria-hidden="true"></i></span>
                     </div>
                 </div>
             </form>
